Fixed formatting bug with images Images were being incorrectly positioned on certain resolutions due to not previously being aligned.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    padding: 0;
     font-family: Roboto, serif;
     font-size: 18px;
 }
@@ -79,9 +80,10 @@ a {
 .content {
     display: flex;
     flex-direction: column;
-    background-color: #8C2B2B;
-    padding: 16px 200px 100px 200px;
+    background-color: #842B27;
+    padding: 16px 300px 100px 300px;
     color:#220808;
+    align-items: center;
 }
 
 h1 {
